# xxd

./: Makefile.in  configure  configure.ac
doc/: Makefile.in
src/: Makefile.in  config.h.in
